[gd_scene load_steps=4 format=2]

[ext_resource path="res://Components/brain/memory_lobe/memory_lobe.gd" type="Script" id=1]
[ext_resource path="res://Effects/question/question.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/exclaimation/exclaimation.tscn" type="PackedScene" id=3]

[node name="memory_lobe" type="Node"]
script = ExtResource( 1 )
EXCLAIMATION = ExtResource( 3 )
QUESTION = ExtResource( 2 )

[node name="memory_timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true

[connection signal="tree_entered" from="." to="." method="_on_memory_lobe_tree_entered"]
[connection signal="timeout" from="memory_timer" to="." method="_on_memory_timer_timeout"]
